--- a/style.css
+++ b/style.css
@@ -277,11 +277,17 @@ footer {
     z-index: 0; /* 背景に移動 */
 }
 
-@media (max-width : 700px) {
+@media (max-width : 768px) {
     header h1 {
         display: block;
         font-size: 30px;
         margin: 0;
         max-width: 100%;
+    }
+    h1 {
+        font-size: 1.8rem;
+    }
+    p {
+        font-size: 1rem;
     }
 }
